--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^0.12.0",
     "@google/generative-ai": "^0.24.1",
+    "appwrite": "^17.0.2",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.4",
     "next": "15.3.1",
